--- a/style.css
+++ b/style.css
@@ -3,7 +3,13 @@
                 margin: 0;
                 padding: 0;
                 background: pink;
-                 font-family: "Poppins", sans-serif;
+                color: PaleVioletRed;
+                font-family: "Poppins", sans-serif;
+                min-height: 100vh;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
             }
 
             h1 {
@@ -46,4 +52,5 @@
 
             span {
                 text-decoration: underline;
+
             }
